Removing animation from queue preview: not showing up correctly after building files

--- a/frontend/src/structure/tabs/queue/Queue.scss
+++ b/frontend/src/structure/tabs/queue/Queue.scss
@@ -1,8 +1,8 @@
 @import "../../../_colors.scss";
 
 .preview-bar-container{
-    animation: pulse-queue-preview 1s infinite;
-    animation-direction: alternate;
+    //animation: pulse-queue-preview 1s infinite;
+    //animation-direction: alternate;
     background-color: $dark;
 }
 
